# bread-common

./: .bread.yml  Cargo.toml  readme.md
src/: lib.rs
src/accountconfig/: v1.rs
src/projectconfig/: mod.rs  v1.rs
