[package]
name = "bread-common"
version = "0.0.2"
edition = "2021"
readme = "readme.md"
description = "Common utilities for Bread projects"
repository = "https://github.com/andrewbaxter/bread-common"
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.91"
